fix projects jumping on scroll up

--- a/src/Components/Navbar/_index.scss
+++ b/src/Components/Navbar/_index.scss
@@ -54,10 +54,10 @@
 			}
 		}
 		.current {
-			color: $defaultIcon;
+			color: $componentName;
 			cursor: default;
 			&:hover {
-				color: $defaultIcon;
+				color: $componentName;
 				&::after {
 					opacity: 0;
 				}
