--- a/src/Components/ProjectCard/_index.scss
+++ b/src/Components/ProjectCard/_index.scss
@@ -8,7 +8,7 @@
 	position: relative;
 
 	@media (min-width: 2400px) {
-		right: 56.2%;
+		// right: 56.2%;
 		width: 3000px;
 	}
 
