--- a/src/Pages/Home/_index.scss
+++ b/src/Pages/Home/_index.scss
@@ -77,6 +77,7 @@
 
 @media (max-width: 1024px) {
 	.home {
+		height: auto;
 		font-size: 2rem;
 		.tab {
 			padding-left: 50px;
